# smarties

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  Makefile  README.rst  dep.mk  dir.mk  hdr.mk  history.txt.REMOVED.git-id  install_dependencies.sh  obj.mk  visualize.py
apps/: README.md  cart-pole  cart-pole-hard  cart-pole-hard.cpp  cart-pole-old  cart-pole-old.cpp  cart-pole.cpp  euler-problem.cpp  main.cpp
apps/ALE/: Makefile  alebot  alebot.cpp
apps/Brutus_2Fish1act_3D/: factory  factory2Stefans  launchBrutus.sh  runBrutus.sh  settings2Stefans.sh  setup.sh
apps/Brutus_2Fish1act_LeaderRandomAct/: factory2F_Learn  launch2F_Learn.sh  settings2F_Learn.sh
apps/CMA/: Makefile  (+23 more)
contrib/: README.md  deploy.sh  install.sh  nek5000.sh  smarties.env
factory/: ._factoryStefans  ._launchBrutus.sh  ._launchFalcon.sh  ._settingsLearn.sh  factory2F  factory2FMovie  factory2FMovieAll  factory2FMoviePres  factory2FMovieSight  factoryCart  factoryCartHard  factoryCartOld  factoryCouzin  factoryCouzinNF_dpar.txt  factoryCouzinNF_hpar.txt  factoryCouzinNF_swarm.txt  factoryCouzin_dpar.txt  factoryCouzin_hpar.txt  factoryCouzin_swarm.txt  factoryCouzin_torus.txt  factoryCyl  factoryExt  factoryGlide  factoryHard  factoryHunt  factoryRL_test1  factorySin  factoryStefans  factorySwarm.txt  factorySwarmANN.txt  factorySwarmDISCR.txt  factorySwarmWAVE.txt  launchBrutus.sh  launchFalcon.sh  launchIF2D.sh  policy_backup  settingsLearn.sh
include/: smarties.f90  smarties.h  smarties_extern.h
launch/: ._launchBrutus.sh  README.md  README.txt  create_rundir.sh  daint_sbatch  excess_kurtosis.py  history.txt.REMOVED.git-id  history2F.txt.REMOVED.git-id  history2F_mixedbad.txt.REMOVED.git-id  launch.sh  launch2F.sh  launch2F_ANN_362412.sh  launch2F_ANN_362412_restart.sh  launch2F_ANN_sight.sh  launch2F_LSTM.sh  launch2F_LSTM_16128.sh  launch2F_LSTM_241612.sh  launch2F_LSTM_all.sh  launch2F_LSTM_new.sh  launch2F_LSTM_pres.sh  launch2F_LSTM_sight.sh  launch2F_LSTM_sight_arg.sh  launch2F_Train_all.sh  launch2F_Train_pres.sh  launch2F_Train_sight.sh  launch2F_train.sh  launchBrutus.sh  launchBrutus_JFM.sh  launchBrutus_LSTM.sh  launchBrutus_RNN.sh  launchBrutus_client.sh  launchBrutus_learn.sh  launchBrutus_learn_cma.sh  launchBrutus_learn_new.sh  launchBrutus_train.sh  launchDaint.sh  launchDaint_client.sh  launchDaint_deepmind.sh  launchDaint_interactive.sh  launchDaint_noanneal_sbatch  (+61 more)
makefiles/: ._Makefile  Agent.d  ArgumentParser.d  Environment.d  Explorer.d  ExternalAgent.d  ExternalEnvironment.d  LSTM  LSTMNet.d  Layers.d  Makefile  MultiTable.d  NAF.d  NFQ.d  NFQApproximator.d  Network.d  NewFishEnvironment.d  ObjectFactory.d  Optimizer.d  Profiler.d  QLearning.d  README.md  Sarsa.d  Saver.d  Scheduler.d  SelfAvoidEnvironment.d  SmartySelfAvoider.d  SmartySwarmer.d  StateAction.d  SwarmEnvironment.d  Transitions.d  TwoFishEnvironment.d  core.32276.REMOVED.git-id  main.d  make.brutus  make.brutus_MPICH  make.brutus_OMP  make.daint  make.daint_srun  make.euler  (+12 more)
pytools/: excess_kurtosis.py  plot_Qcorr.py  plot_RACER_extra.py  plot_cmaes.py  plot_grads.py  plot_obs.py  plot_rew.py  plot_weights.py  random_kurtosis_driver_script.sh  receive_R_files.sh  smarties_plot_bra.py  transfer_R_files.sh
samples/: cart-pole  cart-pole.cpp  glider.cpp
settings/: DQN_REFER.json  PYTORCH.json  VRACER.json  VRACER_LES.json  VRACER_LES_LSTM.json  VRACER_brachistochrone.json  VRACER_expensiveData.json  VRACER_light.json  settings_RACER_atari.json  settings_VRACER_expensiveData.json
source/: ._ObjectFactory.h  ANNApproximator.cpp  ANNApproximator.h  Agent.h  AllAgents.h  AllLearners.h  AllSystems.h  ArgParser.cpp  ArgParser.h  ArgumentParser.cpp  ArgumentParser.h  Bund.h  Communicator.cpp  Communicator.h  Communicator.py  CommunicatorDEBUG.cpp  Communicator_atari.py  Communicator_dmc.py  Communicator_extern.cpp  Communicator_gym.py  Communicator_utils.cpp  Communicator_utils.h  Engine.cpp  ErrorHandling.h  MRAGEnvironment.h  MRAGProfiler.h  Misc.h  MultiTable.cpp  MultiTable.h  ObjectFactory.cpp  ObjectFactory.h  PF_SwarmCylinders.cpp  PF_SwarmCylinders.h  Profiler.cpp  Profiler.h  QApproximator.h  QLearning.cpp  QLearning.h  Scheduler.cpp  Scheduler.h  (+16 more)
tool/: dep
units/: CMakeLists.txt
(+1131 files in other folders)
